--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-mongodb": "^0.2.7",
     "apollo-server-express": "^2.17.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.7.0",
+    "mongoose": "^5.10.2",
     "nodemon": "^2.0.4",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
