--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-datasource-mongodb": "^0.2.7",
     "apollo-server-express": "^2.17.0",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "graphql": "^14.7.0",
     "mongoose": "^5.10.2",
