--- a/package.json
+++ b/package.json
@@ -16,18 +16,28 @@
   "dependencies": {
     "apollo-datasource-mongodb": "^0.2.7",
     "apollo-server-express": "^2.17.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-session": "^1.4.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^14.7.0",
     "mongoose": "^5.10.2",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.2",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.3",
