--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -29,6 +27,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "saslprep": "^1.0.3",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
