apollo set up on react server

--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "apollo-init": "mkdir -p dist/apollo; cd ./dist/apollo; touch index.js",
-    "clean:apollo": "rimraf dist/apollo",
-    "apollo:start-server": "nodemon --watch dist/apollo --exec \"node dist/apollo/index.js\"",
+    "apollo-init": "cd ./dist/; touch apollo.js",
+    "clean:apollo": "rimraf dist/apollo.js",
+    "apollo:start-server": "nodemon --watch dist/apollo.js --exec \"node dist/apollo.js\"",
     "apollo:build-server": "webpack --config webpack.apollo.js --watch --progress",
     "apollo-setup": "npm run clean:apollo && npm run apollo-init",
     "apollo": "npm run apollo-setup && npm-run-all --parallel apollo:*",
-    "dev-init": "mkdir -p dist/src; cd ./dist/src; touch index.js",
-    "clean:dev": "rimraf dist/src",
-    "dev:start": "nodemon --watch dist/src --exec \"node dist/src/index.js\"",
-    "dev:build": "webpack --config webpack.client.js --watch --progress",
-    "dev-setup": "npm run clean:dev && npm run dev-init",
-    "dev": "npm run dev-setup && npm-run-all --parallel dev:*"
+    "dev-init": "cd ./dist; touch ssr.js; touch bundle.js",
+    "clean:dev": "rimraf dist/ssr.js && rimraf dist/bundle.js",
+    "dev:server": "nodemon --watch dist/ssr.js --exec \"node dist/ssr.js\"",
+    "dev:build-client": "webpack --config webpack.client.js --watch --progress",
+    "dev:build-server": "webpack --config webpack.ssr.js --watch --progress",
+    "dev": "NODE_ENV=development && npm run build",
+    "prebuild": "npm run clean:dev && npm run dev-init",
+    "build": "npm-run-all --parallel dev:*"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "apollo-datasource-mongodb": "^0.2.7",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
+    "cross-fetch": "^3.0.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -35,9 +39,11 @@
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "saslprep": "^1.0.3",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -48,6 +54,10 @@
     "@types/node": "^14.6.2",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.3",
