--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.1.4",
+    "@apollo/client": "^3.1.5",
     "apollo-datasource-mongodb": "^0.2.7",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.0.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
@@ -60,6 +61,7 @@
     "@types/react-router-dom": "^5.1.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "source-map-loader": "^1.1.0",
     "ts-loader": "^8.0.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
