--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
-    "cross-fetch": "^3.0.5",
+    "cross-fetch": "^3.0.6",
     "crypto": "^1.0.1",
+    "css-loader": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^14.7.0",
@@ -59,11 +60,16 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.5",
+    "mini-css-extract-plugin": "^0.11.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "source-map-loader": "^1.1.0",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
+    "typescript-plugin-css-modules": "^2.7.0",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.1.4"
   }
 }
